# library_of_alexandria

./: .gitignore  README.md  gui_server.py  install.sh  main.py  pyproject.toml  system.py
man/: loa-add.1  loa-ai-enrich.1  loa-ai-mode.1  loa-ai-model.1  loa-ai-recommend.1  loa-ai-status.1  loa-authors.1  loa-backup.1  loa-bulk-edit.1  loa-calendar-add.1  loa-calendar-done.1  loa-calendar-list.1  loa-calendar-streak.1  loa-check.1  loa-compact.1  loa-dedup-merge.1  loa-dedup-scan.1  loa-details.1  loa-doctor.1  loa-edit.1  loa-export-obsidian.1  loa-export.1  loa-find-author.1  loa-find-composer.1  loa-find-notes.1  loa-find-title.1  loa-goal-clear-monthly.1  loa-goal-clear-yearly.1  loa-goal-set-monthly.1  loa-goal-set-yearly.1  loa-goal-show.1  loa-help.1  loa-history.1  loa-import.1  loa-inbox-add.1  loa-inbox-done.1  loa-inbox-list.1  loa-inbox-process.1  loa-inbox-remove.1  loa-interests-clear.1  (+61 more)
tests/: test_gui_server.py  test_library_features.py
